--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
             </div>
             <div id="nav">
                 <ol class="tree">
+                    <li>
+                        <label for="folder1">test</label> <input type="checkbox" id="test" /> 
+                        <ol>
+                            <li id="/test.txt" class="file"><a href="#/test.txt">test.txt</a></li>
+                            <li>
+                                <label for="subfolder1">Subfolder 1</label> <input type="checkbox" id="subfolder1" /> 
+                                <ol>
+                                    <li class="empty">
+                                        <a>empty</a>
+                                    </li>
+                                </ol>
+                            </li>
+                        </ol>
+                    </li>                
                 </ol>
             </div>
         </div>
