--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
         <link rel="stylesheet" type="text/css" href="css/mobile.css">
         <script src="js/script.js"></script>
         <script src="js/filelist.js"></script>
+        <script src="js/filelist.js"></script>
     </head>
     <body>
         <div id="side">
             <div id="logo-div">
-                <img id="logo" src="logo.png">
+                <a href="index.html">
+                    <img id="logo" src="logo.png">
+                </a>
             </div>
             <div id="nav">
                 <ol class="tree">
