--- a/arup/index.html
+++ b/arup/index.html
@@ -3,12 +3,14 @@
 <html>
 	<head>
 	  <title>Welcome to Arup Mathnasium</title>
-	  <link rel="stylesheet" href="css/style.css">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <link rel="stylesheet" href="css/desktop.css">
+	  <link rel="stylesheet" href="css/mobile.css">
 	  <script src="js/script.js"></script>
 	</head>
 
 	<body>
-		<div class="info">
+		<div class="container">
 			<img id="logo" src="img/logo.png">
 			<div class="header">
 				Welcome to Arup Mathnasium
@@ -17,53 +19,34 @@
 				Choose a location:
 			</div>
 			<div class="body">
-				<div>
+				<div class="info">
 					<a class="site" href="https://www.mathnasium.com/ellicottcity/">Mathnasium of Ellicott City</a>
-					<br>
-					<br>
-					<a class="phone">443-863-6284</a>
-					<br>
-					<br>
+					<a class="phone" href="tel:+14438636284">443-863-6284</a>
 					<a class="directions" href="https://goo.gl/maps/HEmRVcJA59J2">Directions</a>
 				</div>
-				<div>
+				<div class="info">
 					<a class="site" href="https://www.mathnasium.com/germantownmd/">Mathnasium of Germantown</a>
-					<br>
-					<br>
-					<a class="phone">301-768-4255</a>
-					<br>
-					<br>
+					<a class="phone" href="tel:+13017684255">301-768-4255</a>
 					<a class="directions" href="https://goo.gl/maps/ify3DeGr9py">Directions</a>
 				</div>
-				<div>
+				<div class="info">
 					<a class="site" href="https://www.mathnasium.com/northpotomac/">Mathnasium of North Potomac</a>
-					<br>
-					<br>
-					<a class="phone">301-363-4744</a>
-					<br>
-					<br>
+					<a class="phone" href="tel:+13013634744">301-363-4744</a>
 					<a class="directions" href="https://goo.gl/maps/Eb6e1nkfJqz">Directions</a>
 				</div>
-				<div>
+				<div class="info">
 					<a class="site" href="https://www.mathnasium.com/potomac/">Mathnasium of Potomac</a>
-					<br>
-					<br>
-					<a class="phone">240-252-1184</a>
-					<br>
-					<br>
+					<a class="phone" href="tel:+12402521184">240-252-1184</a>
 					<a class="directions" href="https://goo.gl/maps/QG3EHDXwvDs">Directions</a>
 				</div>
-				<div>
+				<div class="info">
 					<a class="site" href="https://www.mathnasium.com/rockville/">Mathnasium of Rockville</a>
-					<br>
-					<br>
-					<a class="phone">301-747-6284</a>
-					<br>
-					<br>
+					<a class="phone" href="tel:+13017476284">301-747-6284</a>
 					<a class="directions" href="https://goo.gl/maps/cNr9vza4xb32">Directions</a>
 				</div>
 			</div>
 			<div class="footer">
+				<a href="http://arupmathnasium.com/enrollment">Click here to enroll!</a>
 			</div>
 		</div>
 		<canvas id="background"></canvas>
