finished client-side dropbox

--- a/dropbox/index.html
+++ b/dropbox/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <input id="login" type="submit" value="Login to Dropbox"/>
+        <div class="loading">Loading</div>
         <div class="side">
             <div class="logo-div">
                 <a href="index.html">
