fixed message bug, cookie bug, changed name of login

--- a/php/index.html
+++ b/php/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>PHP Test</title>
+		<title>Mathnasium Attendance Login</title>
 	</head>
 	<body>
 		<form action="hello.php" method="post">
